<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryBackground"
    android:padding="32dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/passwordLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_inputtext_field"
            android:inputType="textShortMessage"
            android:paddingStart="8dp"
            android:paddingTop="32dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="4dp"
        android:text="@string/password_label"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordEdt"
        app:layout_constraintStart_toStartOf="@+id/passwordEdt"
        app:layout_constraintTop_toBottomOf="@+id/loginLayout"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_field"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/signInBtn"
        app:layout_constraintEnd_toEndOf="@+id/loginLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/loginLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_fill_block"
        android:padding="8dp"
        android:text="@string/sign_in_btn_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/registrationBtn"
        app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/passwordEdt"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdt"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/registrationBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_fill_block"
        android:padding="8dp"
        android:text="@string/registration_btn_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signInBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/signInBtn"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn"
        app:layout_constraintVertical_chainStyle="packed" />

    <ProgressBar
        android:id="@+id/progressBarSignIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>