<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_block"
    android:padding="16dp">

    <EditText
        android:id="@+id/newContentTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_field"
        android:hint="@string/new_post_hint"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/typeGrp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newContentTv">

        <RadioButton
            android:id="@+id/textBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:button="@drawable/ic_text_selector" />

        <RadioButton
            android:id="@+id/imageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:button="@drawable/ic_image_selector" />

        <RadioButton
            android:id="@+id/eventBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:button="@drawable/ic_event_selector" />

        <RadioButton
            android:id="@+id/videoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:button="@drawable/ic_video_selector" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/newContainerFl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeGrp">

    </FrameLayout>

    <ImageView
        android:id="@+id/newPreviewIv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1.618"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newContainerFl"
        tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

    <ImageButton
        android:id="@+id/newPlayBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/newPreviewIv"
        app:layout_constraintEnd_toEndOf="@+id/newPreviewIv"
        app:layout_constraintStart_toStartOf="@+id/newPreviewIv"
        app:layout_constraintTop_toTopOf="@id/newPreviewIv"
        app:srcCompat="@drawable/ic_play" />

    <EditText
        android:id="@+id/newVideoUrlEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_field"
        android:ellipsize="end"
        android:hint="@string/video_url_hint"
        android:inputType="textUri"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPreviewIv" />

    <ImageButton
        android:id="@+id/newGalleryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/newPreviewIv"
        app:layout_constraintEnd_toStartOf="@+id/newCameraBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/newPreviewIv"
        app:srcCompat="@drawable/ic_gallery" />

    <ImageButton
        android:id="@+id/newCameraBtn"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/newPreviewIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/newGalleryBtn"
        app:layout_constraintTop_toTopOf="@id/newPreviewIv"
        app:srcCompat="@drawable/ic_camera" />

    <ImageView
        android:id="@+id/newLocationIv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/newAddressEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newAddressEt"
        app:srcCompat="@drawable/ic_location" />

    <EditText
        android:id="@+id/newAddressEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_field"
        android:ellipsize="end"
        android:hint="@string/event_address_hint"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newLocationIv"
        app:layout_constraintTop_toBottomOf="@id/newVideoUrlEt"
        tools:text="St. Petersburg, Nekrasova str., 13" />

    <ImageView
        android:id="@+id/sendBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_fill_block"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/cancelBtn"
        app:layout_constraintTop_toBottomOf="@+id/newAddressEt"
        app:srcCompat="@drawable/ic_send" />

    <ImageView
        android:id="@+id/cancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_fill_block"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAddressEt"
        app:srcCompat="@drawable/ic_cancel" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/newLocationGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="newLocationIv,newAddressEt"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>